--- a/public/form.html
+++ b/public/form.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>Store</title>
 </head>
-<body>
+<body class="d-none">
 <!-- Navbar content -->
 <nav class="navbar sticky-top navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand">This is store</a>
-        <button id="modalButton" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal" type="button">Корзина</button>
     </div>
 </nav>
 
@@ -17,24 +16,6 @@
     <div id="app"></div>
 </div>
 
-<!-- Модальное окно тоже можно было создать как компонент, но я предпочел работать так-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Cart</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="cart-list">
-            </div>
-            <div id="cart-summary" class="d-flex justify-content-end p-4"></div>
-            <div class="modal-footer" id="cart-buttons">
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Я знаю, что так лучше не делать, но так как пока нет возможности импорта внутри файлов, я подключил их так -->
 <script src="assets/scripts/main.js"></script>
 </body>
 </html>
