--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Store</title>
 </head>
-<body>
+<body class="d-none">
 <!-- Navbar content -->
 <nav class="navbar sticky-top navbar-dark bg-dark">
     <div class="container">
@@ -34,7 +34,6 @@
     </div>
 </div>
 
-<!-- Я знаю, что так лучше не делать, но так как пока нет возможности импорта внутри файлов, я подключил их так -->
 <script src="assets/scripts/main.js"></script>
 </body>
 </html>
