--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Store</title>
 </head>
+<style>
+    .d-none {
+        display: none;
+    }
+</style>
 <body class="d-none">
 <!-- Navbar content -->
 <nav class="navbar sticky-top navbar-dark bg-dark">
